[gd_scene load_steps=71 format=3 uid="uid://bw3jcoiri5uda"]

[ext_resource type="Script" uid="uid://mwaiy6n2vmjr" path="res://Scenes/Boss.gd" id="1_jdskg"]
[ext_resource type="Texture2D" uid="uid://cut1h8ftroqpb" path="res://Assets/Sprites/6-Boss_NightBorne/NightBorne.png" id="2_rgqsi"]
[ext_resource type="AudioStream" uid="uid://cgbpa7au8l7gv" path="res://Assets/Music and sound/Tutorial_Music.mp3" id="3_smvyy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smvyy"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_me6e5"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5nlm"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouxnj"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tp3b"]
atlas = ExtResource("2_rgqsi")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gjka"]
atlas = ExtResource("2_rgqsi")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy1o6"]
atlas = ExtResource("2_rgqsi")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnrqi"]
atlas = ExtResource("2_rgqsi")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_avs7u"]
atlas = ExtResource("2_rgqsi")
region = Rect2(640, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6qxx"]
atlas = ExtResource("2_rgqsi")
region = Rect2(720, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6njix"]
atlas = ExtResource("2_rgqsi")
region = Rect2(800, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj2j4"]
atlas = ExtResource("2_rgqsi")
region = Rect2(880, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbogr"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly62n"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohr08"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa1i8"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8vu2"]
atlas = ExtResource("2_rgqsi")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k66r"]
atlas = ExtResource("2_rgqsi")
region = Rect2(400, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r7pj"]
atlas = ExtResource("2_rgqsi")
region = Rect2(480, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij1pr"]
atlas = ExtResource("2_rgqsi")
region = Rect2(560, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nitbp"]
atlas = ExtResource("2_rgqsi")
region = Rect2(640, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h3yq"]
atlas = ExtResource("2_rgqsi")
region = Rect2(720, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxsyo"]
atlas = ExtResource("2_rgqsi")
region = Rect2(800, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1si5"]
atlas = ExtResource("2_rgqsi")
region = Rect2(880, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vc3j"]
atlas = ExtResource("2_rgqsi")
region = Rect2(960, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnmx5"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1040, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl6e3"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1120, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5p0g"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1200, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5e22"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1280, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtff8"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1360, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqg82"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1440, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuly0"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1520, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6khy"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1600, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjmhp"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1680, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4xce"]
atlas = ExtResource("2_rgqsi")
region = Rect2(1760, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgqsi"]
atlas = ExtResource("2_rgqsi")
region = Rect2(960, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxr0n"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw2sk"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3jbm"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7heva"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_veixi"]
atlas = ExtResource("2_rgqsi")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oyi1"]
atlas = ExtResource("2_rgqsi")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kih1"]
atlas = ExtResource("2_rgqsi")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0iri"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d40i4"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_stir4"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmg4g"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqygy"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpmkf"]
atlas = ExtResource("2_rgqsi")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3ta"]
atlas = ExtResource("2_rgqsi")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_674q3"]
atlas = ExtResource("2_rgqsi")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_27m02"]
atlas = ExtResource("2_rgqsi")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmmlo"]
atlas = ExtResource("2_rgqsi")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss6v5"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnb7m"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dpjt"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57it"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jppj4"]
atlas = ExtResource("2_rgqsi")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_liham"]
atlas = ExtResource("2_rgqsi")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_akrk0"]
atlas = ExtResource("2_rgqsi")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekovs"]
atlas = ExtResource("2_rgqsi")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2y0j"]
atlas = ExtResource("2_rgqsi")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmycw"]
atlas = ExtResource("2_rgqsi")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lis"]
atlas = ExtResource("2_rgqsi")
region = Rect2(320, 240, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgqsi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me6e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5nlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouxnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tp3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gjka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy1o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnrqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avs7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6qxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6njix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj2j4")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbogr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly62n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohr08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa1i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8vu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k66r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r7pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij1pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nitbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h3yq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxsyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1si5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vc3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnmx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl6e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5p0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5e22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtff8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqg82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuly0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6khy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjmhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4xce")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgqsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxr0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw2sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3jbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7heva")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_veixi")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_7oyi1")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_8kih1")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_t0iri")
}],
"loop": false,
"name": &"fade_in",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d40i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stir4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmg4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpmkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_674q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27m02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmmlo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss6v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnb7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dpjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jppj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liham")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_akrk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekovs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2y0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmycw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lis")
}],
"loop": false,
"name": &"stun",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgqsi"]
size = Vector2(37, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_smvyy"]
radius = 23.0217

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_jdskg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_rgqsi")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 10)
shape = SubResource("RectangleShape2D_rgqsi")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(23, 7)
shape = SubResource("CircleShape2D_smvyy")

[node name="StunTimer" type="Timer" parent="."]

[node name="BossCamera" type="Camera2D" parent="."]

[node name="BossMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_smvyy")
volume_db = -4.0
